# moment-to-action

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  EDGEPERCEIVE_EXPLORATION.md  README.md  environment.yml  foo.sh  inference_results_20260126_225600.jsonl  justfile  main.py  profile_accelerators.sh  pyproject.toml  reasoning2.py  reorg.txt  todo.txt
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: lint.yml  test.yml
audio/: README.md
experiments/: .yolo-inference-npu.py.swp  README.md  batch_testing.py  benchmark_inference.sh  get_yamnet_tflite.py  melspec.py  requirements.txt  run_efficient_net.py  setup_tflite_yamnet.sh  yamnet-inference-onnx.py  yamnet_tensorflow.py
feature1/: README.md  realtime_monitor.py  requirements.txt  simple_trigger.py  yamnet_class_groups.py  yamnet_movinet_integrated.py  yamnet_scream_tune.py
feature1/fighting_audio/: fighting_audio_rt2_transcript.txt  fighting_audio_rt4_transcript.txt  fighting_audio_rt5_transcript.txt  fighting_audio_rt6_transcript.txt  fighting_audio_rt7_transcript.txt  fighting_audio_rt_transcript.txt
feature1/misc_scripts/: audio_dataset.py  benchmark_backends.py  build_yamnet_core.py  diagnose_npu.py  yamnet_quantization.py  yolo_triggered_detector.py
feature1/models/yamnet/: get_yamnet_tflite.py
feature1/movinet/: inspect_model.py  movinet_trial.py  movinet_violence_detection.py
feature1/useful_scripts/: mp3towav.py  power_profiler.py  test_audio.py  test_power_monitoring.py
feature1/yamnet_testing/: realtime_yamnet.py  realtime_yamnet_stream.py  realtime_yamnet_stream2.py  yamnet_inference.py  yamnet_inference2.py  yamnet_inference_profiled.py  yamnet_inference_quant.py  yamnet_scream_tune_backup.py  yamnet_tflite.py  yamwhisp.py
mobilenet/: README.md  setup_env.sh
mobilenet/output/: classification_report.txt  rwf2000_analysis.txt  training_history.json
mobilenet/viz/: generate_visualizations.py
movinet/MoViNets-for-Violence-Detection-in-Live-Video-Streaming/Notebooks/: movinet_tf_lite_inference.ipynb
scripts/: __init__.py  draw_detections.py  repo_setup.sh  run_camera_action_pipeline.py  run_camera_smolvlm2_pipeline.py  run_mobileclip_pipeline.py  run_smolvlm2_pipeline.py  run_yolo_pipeline.py  run_yolo_pipeline_nometrics.py  smolvlm2.ipynb
src/edgeperceive/: README_old.md  __init__.py
src/edgeperceive/hardware/: types.py
src/edgeperceive/pipeline/: __init__.py  run_yolo_pipeline_nometrics.py
src/edgeperceive/preprocessors/video/: __init__.py
src/edgeperceive/stages/vision_stages/: __init__.py
src/moment_to_action/: __init__.py  __main__.py  _logging.py  _pipeline.py  config.py  config.yaml  dmabuf.py  how_to_use_api.md  llm_api.py  pipeline.py
src/moment_to_action/_cli/: __init__.py  _auto_group.py  _params.py
src/moment_to_action/_cli/commands/: cmd_read_power.py
src/moment_to_action/config/slm_config/: slm_config.py  slm_config.yaml
src/moment_to_action/edgeperceive/: README.md
src/moment_to_action/edgeperceive/core/: __init__.py  messages.py
src/moment_to_action/edgeperceive/hardware/: __init__.py  compute_backend.py  types.py
src/moment_to_action/edgeperceive/metrics/: collector.py
src/moment_to_action/edgeperceive/pipeline/: draw_detections.py  run_mobileclip_pipeline.py  run_yolo_pipeline.py  run_yolo_pipeline_nometrics.py
src/moment_to_action/edgeperceive/preprocessors/: __init__.py  base.py
src/moment_to_action/edgeperceive/stages/: __init__.py  base.py
src/moment_to_action/hardware/: __init__.py  _backend.py  _torch_policy.py  _types.py
src/moment_to_action/hardware/_platforms/: __init__.py  _base.py  _detection.py
src/moment_to_action/messages/: __init__.py  _base.py  audio.py  llm.py  sensor.py  video.py  vlm.py
src/moment_to_action/metrics/: __init__.py  _collector.py  _types.py  collector.py  ml.py
src/moment_to_action/models/: __init__.py  _manager.py  _registry.py  _types.py
src/moment_to_action/sensors/: __init__.py  _base.py  _camera_stream.py  _file_image.py  file.py
src/moment_to_action/stages/: __init__.py  _base.py  _pipeline.py  _preprocess.py
src/moment_to_action/stages/audio/: __init__.py
src/moment_to_action/stages/llm/: __init__.py  _reasoning.py  _reasoning_backup.py
src/moment_to_action/stages/video/: __init__.py  _clip_buffer.py  _preprocess.py  _temporal_action.py  _yolo.py
src/moment_to_action/stages/vlm/: __init__.py  _mobileclip.py  _smolvlm2.py
src/moment_to_action/utils/: __init__.py  buffer.py  cli.py  compute.py
system/: README.md  audiomodule.py  build_mini_dataset.py  llmquery.py  minimodal.py  movinet.py  retrieveframe.py  yolosync.py
system/fight_module/: fight_detector.py
system/output_full/: llm_response.json  speech_events.json  yamnet_events.json  yolo_events.json
system/output_movinet/: movinet_results.json
tests/: __init__.py  conftest.py
tests/int/: __init__.py  conftest.py  test_draw_detections.py  test_mobileclip_pipeline.py  test_yolo_pipeline.py
tests/int/models/yolo/: model.onnx
tests/unit/: __init__.py  conftest.py  test_logging.py  test_pipeline.py
tests/unit/cli/: __init__.py  conftest.py  test_auto_group.py  test_init.py  test_params.py
tests/unit/cli/commands/: __init__.py  test_cmd_read_power.py
tests/unit/hardware/: __init__.py  test_backend.py  test_detection.py  test_qcs6490.py  test_runtimes.py  test_torch_policy.py  test_types.py  test_x86_64.py
tests/unit/messages/: __init__.py  test_messages.py
tests/unit/metrics/: __init__.py  test_collector.py  test_types.py
tests/unit/models/: test_manager.py  test_types.py
tests/unit/sensors/: test_camera_stream.py  test_file_image.py
tests/unit/stages/: __init__.py  test_base.py  test_preprocess.py
tests/unit/utils/: test_buffer.py  test_cli.py  test_compute.py  test_ml.py
violence/: README.md  fileparse.py  requirements.txt  rtdetection.py  run_violence_detection.sh  setup_env.sh  violence_detection.py
violence/output/: inference_results_20260209_140852.json  inference_results_20260209_191627.json  weak_label_analysis.txt
(+32 files in other folders)
