[project]
name = "moment-to-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikola Vuk Maruszewski", email = "nikola@gatech.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.3",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.3",
    "open-clip-torch>=3.3.0",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.0",
    "psutil>=6.0",
    "tensorflow>=2.21.0",
    "attrs>=25.4.0",
    "click>=8.3.1",
    "rich>=14.3.3",
    "rich-click>=1.9.7",
    "platformdirs>=4.0.0",
    "huggingface_hub>=0.18.0",
    "llama-cpp-python>=0.3.16",
]

[project.scripts]
m2a = "moment_to_action._cli:cli"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "moment_to_action"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pylsp-mypy>=0.7.1",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server[all]>=1.14.0",
    "ruff>=0.15.4",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "pytest-antilru>=2.0.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    # Formatter-incompatible
    "COM812",

    # Lazy/conditional imports are intentional for optional deps (cv2, tf, onnxruntime)
    "PLC0415",

    # Any is appropriate for opaque runtime handles (TFLite interpreters, ONNX sessions)
    "ANN401",

    # __init__ docstrings are redundant when classes have docstrings
    "D107",
]

[tool.ruff.lint.per-file-ignores]
# scripts/ is not a package — INP001 (implicit namespace) doesn't apply
"scripts/*.py" = ["INP001"]

# Tests: exceptions for the many things that are OK in tests
"tests/**/*.py" = [
    # assertions (S101)
    "S101",
    # magic numbers (PLR2004)
    "PLR2004",
    # private member access (SLF001)
    "SLF001",
    # pytest imports outside type-checking (TC002)
    "TC002",
    # nested context managers (SIM117)
    "SIM117",
    # hardcoded temp files (S108)
    "S108",
    # undocumented public packages (D104)
    "D104",
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ['.mypy_cache', '.venv']
ignore_missing_imports = true
ignore_missing_imports_per_module = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests (disabled by default)",
]
addopts = "-m 'not slow' -rs"

[tool.coverage.run]
source = ["src"]
source_pkgs = ["moment_to_action"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/__init__.py",
    "*/edgeperceive/*",
]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
