[project]
name = "moment-to-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikola Vuk Maruszewski", email = "nikola@gatech.edu" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "backports-strenum>=1.3.1; python_version < '3.11'",
    "torch>=2.5.0a0; platform_machine == 'aarch64'",
    "torch>=2.5.0; platform_machine != 'aarch64'",
    "nvidia-cusparselt-cu12>=0.7.1; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "torchvision>=0.20.0; platform_machine != 'aarch64'",
    "torchvision>=0.20.0; platform_machine == 'aarch64'",
    "pillow>=10.0.0",
    "ai-edge-litert>=2.1.3",
    "num2words>=0.5.14",
    "numpy>=1.26.4,<2.0; python_version < '3.11'",
    "numpy>=2.4.3; python_version >= '3.11'",
    "onnxruntime>=1.23.2,<1.24.0; python_version < '3.11'",
    "onnxruntime>=1.24.3; python_version >= '3.11'",
    "open-clip-torch>=3.3.0; platform_machine != 'aarch64'",
    "opencv-python-headless>=4.10.0.84,<4.13.0.92; python_version < '3.11'",
    "opencv-python-headless>=4.13.0.92; python_version >= '3.11'",
    "pydantic>=2.0",
    "psutil>=6.0",
    "tensorflow>=2.21.0",
    "transformers>=4.49.0",
    "attrs>=25.4.0",
    "click>=8.3.1",
    "rich>=14.3.3",
    "rich-click>=1.9.7",
    "platformdirs>=4.0.0",
    "huggingface_hub>=0.18.0",
    "av>=17.0.0",
]

[project.scripts]
m2a = "moment_to_action._cli:cli"

# On Jetson (aarch64) uv resolves torch from NVIDIA's JetPack wheel index instead
# of PyPI, so the installed wheel has CUDA support built in.
[[tool.uv.index]]
name = "nvidia-jetpack"
url = "https://developer.download.nvidia.com/compute/redist/jp/v61/pytorch/"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv]
# JetPack only provides a cp310 torch wheel; Python ≥3.11 + aarch64 is not
# a supported target, so restrict the solver to the environments that actually
# exist. Entries must be disjoint.
environments = [
    "platform_machine == 'aarch64' and python_version == '3.10'",
    "platform_machine != 'aarch64'",
]
# torchvision 0.21.0 declares torch==2.6.0, but the JetPack torch is 2.5.0a0.
# We know it works; tell the resolver to treat any torch ≥2.5.0a0 as acceptable.
override-dependencies = [
    "torch>=2.5.0a0",
]

[tool.uv.sources]
torch = [
    { index = "nvidia-jetpack", marker = "platform_machine == 'aarch64'" },
]
torchvision = [
    { url = "https://download-r2.pytorch.org/whl/cu126/torchvision-0.21.0-cp310-cp310-linux_aarch64.whl", marker = "platform_machine == 'aarch64' and python_version == '3.10'" },
]

[build-system]
requires = ["uv_build>=0.10.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "moment_to_action"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=1.19.1",
    "pylsp-mypy>=0.7.1",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server[all]>=1.14.0",
    "ruff>=0.15.4",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "pytest-antilru>=2.0.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    # Formatter-incompatible
    "COM812",

    # Lazy/conditional imports are intentional for optional deps (cv2, tf, onnxruntime)
    "PLC0415",

    # Any is appropriate for opaque runtime handles (TFLite interpreters, ONNX sessions)
    "ANN401",

    # __init__ docstrings are redundant when classes have docstrings
    "D107",
]

[tool.ruff.lint.per-file-ignores]
# scripts/ is not a package — INP001 (implicit namespace) doesn't apply
"scripts/*.py" = ["INP001"]

# Tests: exceptions for the many things that are OK in tests
"tests/**/*.py" = [
    # assertions (S101)
    "S101",
    # magic numbers (PLR2004)
    "PLR2004",
    # private member access (SLF001)
    "SLF001",
    # pytest imports outside type-checking (TC002)
    "TC002",
    # nested context managers (SIM117)
    "SIM117",
    # hardcoded temp files (S108)
    "S108",
    # undocumented public packages (D104)
    "D104",
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ['.mypy_cache', '.venv']
ignore_missing_imports = true
ignore_missing_imports_per_module = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests (disabled by default)",
]
addopts = "-m 'not slow' -rs"

[tool.coverage.run]
source = ["src"]
source_pkgs = ["moment_to_action"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/__init__.py",
    "*/edgeperceive/*",
]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
